logs/2021-01-29_15-19-24.txt
npm WARN discord.js@11.6.4 requires a peer of @discordjs/uws@^10.149.0 but none is installed. You must install peer dependencies yourself.

audited 126 packages in 1.649s

3 packages are looking for funding
  run `npm fund` for details

found 0 vulnerabilities


> accountgenbot@2.0.0 start /home/minecraft/multicraft/servers/server165639
> node index.js

/home/minecraft/multicraft/servers/server165639/index.js:34
};
^

SyntaxError: missing ) after argument list
    at wrapSafe (internal/modules/cjs/loader.js:1047:16)
    at Module._compile (internal/modules/cjs/loader.js:1097:27)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1153:10)
    at Module.load (internal/modules/cjs/loader.js:977:32)
    at Function.Module._load (internal/modules/cjs/loader.js:877:14)
    at Function.executeUserEntryPoint [as runMain] (internal/modules/run_main.js:74:12)
    at internal/main/run_main_module.js:18:47
npm ERR! code ELIFECYCLE
npm ERR! errno 1
npm ERR! accountgenbot@2.0.0 start: `node index.js`
npm ERR! Exit status 1
npm ERR! 
npm ERR! Failed at the accountgenbot@2.0.0 start script.
npm ERR! This is probably not a problem with npm. There is likely additional logging output above.

npm ERR! A complete log of this run can be found in:
npm ERR!     /tmp/npm/_logs/2021-01-29T15_19_26_818Z-debug.log
